tdf#154296 Fix customize notebook bar regression

caused by commit e79741488cc740f49ebd4426c40b45e7139ff663

Change-Id: I04fe66124af831c73834b7f695458e1667198ddb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149470
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>
(cherry picked from commit 48b7cf3182cc8fb0b728860f9cbb489390074101)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149600
Tested-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>